--- a/corpstats/templates/corpstat/base.html
+++ b/corpstats/templates/corpstat/base.html
@@ -8,11 +8,11 @@
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
                     <ul class="nav navbar-nav">
-                        {% if available_corps %}
+                        {% if available %}
                             <li class="dropdown">
                                 <a href="#" id="dLabel" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">{% trans "Corporations" %}<span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                                    {% for corpstat in available_corps %}
+                                    {% for corpstat in available %}
                                         <li>
                                             <a href="{% url 'corpstat:view_corp' corpstat.corp.corporation_id %}">{{ corpstat.corp.corporation_name }}</a>
                                         </li>
@@ -20,16 +20,9 @@
                                 </ul>
                             </li>
                         {% endif %}
-                        {% if available_alliances %}
-                            <li class="dropdown">
-                                <a href="#" id="dLabel2" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">{% trans "Alliances" %}<span class="caret"></span></a>
-                                <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel2">
-                                    {% for alliance_id, alliance_name in available_alliances.items %}
-                                        <li>
-                                            <a href="{% url 'corpstat:view_alliance' alliance_id %}">{{ alliance_name }}</a>
-                                        </li>
-                                    {% endfor %}
-                                </ul>
+                        {% if available.count > 1 %}
+                            <li>
+                                <a href="{% url 'corpstat:view_all' %}">{% trans "View All" %}</a>
                             </li>
                         {% endif %}
                         {% if perms.corpstats.add_corpstat %}
