fix search bug and minor updates

--- a/corpstats/templates/corpstat/search.html
+++ b/corpstats/templates/corpstat/search.html
@@ -1,4 +1,4 @@
-{% extends "corputils/base.html" %}
+{% extends "corpstat/base.html" %}
 {% load i18n %}
 {% block member_data %}
     <div class="panel panel-default">
