use logo url generators

--- a/corpstats/templates/corpstat/corpstats.html
+++ b/corpstats/templates/corpstat/corpstats.html
@@ -102,7 +102,7 @@
                                                                     <tr>
                                                                         <td class="text-center" style="width:5%">
                                                                             <div class="thumbnail" style="border: 0 none; box-shadow: none; background: transparent;">
-                                                                                <img src="https://image.eveonline.com/Character/{{ alt.character_id }}_32.jpg" class="img-circle">
+                                                                                <img src="{{ alt.portrait_url_32 }}" class="img-circle">
                                                                             </div>
                                                                         </td>
                                                                         <td class="text-center" style="width:30%">{{ alt.character_name }}</td>
