[FIX] Missing `li` tag

--- a/corpstats/templates/corpstat/base.html
+++ b/corpstats/templates/corpstat/base.html
@@ -10,7 +10,9 @@
 {% endblock %}
 
 {% block header_nav_collapse_right %}
-    {% include "corpstat/menu-search-corporation.html" with suffix="menu" %}
+    <li role="presentation" class="nav-item">
+        {% include "corpstat/menu-search-corporation.html" with suffix="menu" %}
+    </li>
 {% endblock %}
 
 {% block content %}
