[REMOVE] Unnecessary class

--- a/corpstats/templates/corpstat/menu-search-corporation.html
+++ b/corpstats/templates/corpstat/menu-search-corporation.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<form id="aa-corpstats-corpsearch" class="navbar-form" role="search" action="{% url 'corpstat:search' %}" method="GET">
+<form id="aa-corpstats-corpsearch" role="search" action="{% url 'corpstat:search' %}" method="GET">
     <div class="input-group has-feedback has-search">
         <span class="input-group-text">
             <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512">
